[package]
name = "zenoh-typed-pubsub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1.35.1", features = ["rt", "macros"] }
zenoh = "0.10.1-rc"
